<resources>
    <!--Core Details-->
    <string name="app_name">Breathoscope</string>

    <!--Login text-->
    <string name="login_login_btn">Login</string>
    <string name="login_reset_btn">Reset</string>
    <string name="login_uname_hint">Name</string>
    <string name="login_password_hint">Password</string>
    <string name="login_incorrect_msg">Invalid Login</string>
    <!-- Fallback values-->
    <string name="default_name">None/ Could not load</string>
    <!-- Patient List -->
    <string name="patient_list_select">Select</string>
    <!-- shared preferences -->
    <string name="preference_pass_hash">password_hash</string>

    <!--Thermometer Text-->
    <string name="temperature_store">Record</string>
    <string name="fever_prompt">Has the patient had a fever in the past 48 hours?</string>
    <string name="temperature_confirm_dialog">Temperature is %1$.2f, are you satisfied?</string>
    <string name="degrees">%1$.2f°C</string>

    <!--Breath Text-->
    <string name="breath_rate_tap">Tap on Inhalation</string>
    <string name="breath_rate_start">Start Recording</string>
    <string name="confirmdialog">Breath Rate is %1$d, are you satisfied?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="done">✓</string>

    <!-- Snackbar message(s) -->
    <string name="snackbar_mic_warning">Please make sure microphone is plugged in correctly</string>
    <string name="snackbar_thermometer_warning">Please make sure thermometer is plugged in correctly</string>
    <!-- Patient Profile -->
    <string name="load_failed">Failed to load</string>

    <!-- Recording activity strings -->
    <string name="recording_play">Play Recording</string>
    <string name="recording_stop">Stop playing</string>
    <string name="recording_confirm">Confirm</string>

    <!--Diagnoses-->
    <string name="diagnosis_title">Diagnosis</string>

    <!-- Test Titles -->
    <string name="malaria_title">Malaria</string>
    <string name="danger_title">Danger Signs</string>
    <string name="fever_title">Fever</string>
    <string name="breath_title">Breath</string>
    <string name="diarrhoea_title">Diarrhoea</string>

    <string name="heart_title">Heart Rate</string>

    <string-array name="sexes_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="title_activity_recommended_actions">RecommendedActionsActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--Malaria testing -->
    <string name="Test_malria_question">Which of these pictures matches the results</string>


    <!-- Malaria servity signs -->
    <string name="mal_danger_question">Does he/she display these signs of Severe Malaria: </string>
    <string name="mal_danger_signs">- Unconscious/prostrate
                \n- Convulsions
                \n- Lethargy
                \n- Severe pallor
                \n- Unable to drink/vomiting
                \n- Respiratory sistres
                \n- Cyanosis</string>


    <string name="pneu_danger_question">Does he/she display these signs of Severe Pneumonia ?:</string>

    <!-- Malaria servity signs -->
    <string name="pneu_danger_signs">-Chest Indrawing
                \n- Stridor
                \n- Nasal Flaring
                \n- Cyanosis</string>


    <string name="Severe_Pneumonia">\Give First Dose of Amoxicillin:
    \n </string>

    <!-- for non severe Pneumonia-->

    <string name="Pneumonia">\Treat with Amoxicillin
    \n </string>


    <string name="Treat_with">\Treat with:
    \n </string>

    <string name="Non_Sev_Mal_">\Oral AnitMalaria
    \n </string>

    <!-- Fever main Question  -->

    <string name="Fever_Q">Fever or History of fever in past 48 hours</string>

    <string name="Child_Age">How old is she/he</string>


    <string name="title_activity_pref__mal_test">Pref_Mal_test</string>

    <string name="title_activity_refer__hc">Refer_HC</string>

    <string name="Refer_HC">Refer To Health Clinic</string>

    <string name="Refer_hospital_3">\Refer to Hospital URGENTLY!!</string>

    <string name="Refer_hospital_2">\and</string>

    <string name="Refer_hospital_1">\Give pre- referral Artesunate</string>
    <string name="title_activity_severe__and__pos">Severe_And_Pos</string>


</resources>
