<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#FFDD00"
    tools:context=".activities.NonSeverePneumoniaTreatment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/Pneumonia"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:text="@string/Refer_hospital_2"
        android:textSize="30sp"
        android:padding="4dp"
        android:layout_marginBottom="0dp"
        android:textColor="#000000"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:text="@string/Refer_HC"
        android:textSize="30sp"
        android:padding="4dp"
        android:layout_marginBottom="40dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#000000"
        />

</LinearLayout>