<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/login_image_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="@dimen/home_icon_large_width"
            android:layout_height="@dimen/home_icon_large_height"
            android:layout_marginTop="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_stethoscope"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_image_section">
        <EditText
            android:id="@+id/login_uname"
            android:hint="@string/login_uname_hint"
            android:layout_width="@dimen/text_in_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:nextFocusForward="@id/login_pass"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <EditText
            android:id="@+id/login_pass"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_width="@dimen/text_in_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:imeOptions="actionDone"
            app:layout_constraintTop_toBottomOf="@id/login_uname"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>



        <Button
            android:id="@+id/login_reset_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_reset_btn"
            app:layout_constraintTop_toBottomOf="@id/login_pass"
            app:layout_constraintRight_toLeftOf="@id/login_login_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="64dp"/>


        <Button
            android:id="@+id/login_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_login_btn"
            app:layout_constraintTop_toBottomOf="@id/login_pass"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/login_reset_btn"
            android:layout_marginTop="64dp"/>

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>