<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/home_patient_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <ImageView
            android:id="@+id/home_patient_picture"
            android:layout_width="@dimen/home_thumb_width"
            android:layout_height="@dimen/home_thumb_height"
            android:layout_margin="8dp"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/home_patient_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_failed"
            android:background="@drawable/light_outline"
            android:layout_marginStart="8dp"
            android:padding="4dp"
            app:layout_constraintLeft_toRightOf="@id/home_patient_picture"
            app:layout_constraintTop_toTopOf="@id/home_patient_picture"/>
        <TextView
            android:id="@+id/home_patient_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_failed"
            android:background="@drawable/light_outline"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            app:layout_constraintLeft_toLeftOf="@id/home_patient_name"
            app:layout_constraintTop_toBottomOf="@id/home_patient_name"/>
        <TextView
            android:id="@+id/home_patient_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_failed"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            android:background="@drawable/light_outline"
            app:layout_constraintLeft_toLeftOf="@id/home_patient_sex"
            app:layout_constraintTop_toBottomOf="@id/home_patient_sex" />

    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/home_test_breath_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/home_patient_details"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/home_test_fever_card"
        app:cardCornerRadius="@dimen/card_default_corner"
        app:cardElevation="@dimen/card_default_elevation"
        app:cardBackgroundColor="@color/cardview_light_background">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="@dimen/home_icon_large_width"
                android:layout_height="@dimen/home_icon_large_height"
                android:src="@drawable/ic_stethoscope"
                android:layout_margin="@dimen/default_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/home_test_breath_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:textSize="@dimen/large_font_size"
                android:text="@string/breath_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/home_test_breath_tick"
                android:layout_width="@dimen/checkbox_large_width"
                android:layout_height="@dimen/checkbox_large_height"
                android:layout_marginEnd="@dimen/default_margin"
                android:clickable="false"
                android:button="@null"
                android:background="?android:attr/listChoiceIndicatorMultiple"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/home_test_fever_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/home_test_breath_card"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/home_test_danger_card"
        app:cardCornerRadius="@dimen/card_default_corner"
        app:cardElevation="@dimen/card_default_elevation"
        app:cardBackgroundColor="@color/cardview_light_background">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="@dimen/home_icon_large_width"
                android:layout_height="@dimen/home_icon_large_height"
                android:src="@drawable/ic_thermometer_alert"
                android:layout_margin="@dimen/default_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/home_test_fever_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:textSize="@dimen/large_font_size"
                android:text="@string/fever_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/home_test_fever_tick"
                android:layout_width="@dimen/checkbox_large_width"
                android:layout_height="@dimen/checkbox_large_height"
                android:layout_marginEnd="@dimen/default_margin"
                android:clickable="false"
                android:button="@null"
                android:background="?android:attr/listChoiceIndicatorMultiple"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/home_test_danger_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/home_test_fever_card"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/home_test_diarrhoea_card"
        app:cardCornerRadius="@dimen/card_default_corner"
        app:cardElevation="@dimen/card_default_elevation"
        app:cardBackgroundColor="@color/cardview_light_background">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="@dimen/home_icon_large_width"
                android:layout_height="@dimen/home_icon_large_height"
                android:src="@drawable/ic_clipboard_pulse_outline"
                android:layout_margin="@dimen/default_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/home_test_danger_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:textSize="@dimen/large_font_size"
                android:text="@string/danger_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/home_test_danger_tick"
                android:layout_width="@dimen/checkbox_large_width"
                android:layout_height="@dimen/checkbox_large_height"
                android:layout_marginEnd="@dimen/default_margin"
                android:clickable="false"
                android:button="@null"
                android:background="?android:attr/listChoiceIndicatorMultiple"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/home_test_diarrhoea_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/home_test_danger_card"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/home_test_malaria_card"
        app:cardCornerRadius="@dimen/card_default_corner"
        app:cardElevation="@dimen/card_default_elevation"
        app:cardBackgroundColor="@color/cardview_light_background">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="@dimen/home_icon_large_width"
                android:layout_height="@dimen/home_icon_large_height"
                android:src="@drawable/ic_intestine"
                android:layout_margin="@dimen/default_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/home_test_diarrhoea_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:textSize="@dimen/large_font_size"
                android:text="@string/diarrhoea_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/home_test_diarrhoea_tick"
                android:layout_width="@dimen/checkbox_large_width"
                android:layout_height="@dimen/checkbox_large_height"
                android:layout_marginEnd="@dimen/default_margin"
                android:clickable="false"
                android:button="@null"
                android:background="?android:attr/listChoiceIndicatorMultiple"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/home_test_malaria_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/home_test_diarrhoea_card"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="@dimen/card_default_corner"
        app:cardElevation="@dimen/card_default_elevation"
        app:cardBackgroundColor="@color/cardview_light_background">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="@dimen/home_icon_large_width"
                android:layout_height="@dimen/home_icon_large_height"
                android:src="@drawable/ic_baseline_photo_camera_24px"
                android:layout_margin="@dimen/default_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/home_test_malaria_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/malaria_title"
                android:textSize="@dimen/large_font_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/home_test_malaria_tick"
                android:layout_width="@dimen/checkbox_large_width"
                android:layout_height="@dimen/checkbox_large_height"
                android:layout_marginRight="@dimen/default_margin"
                android:clickable="false"
                android:button="@null"
                android:background="?android:attr/listChoiceIndicatorMultiple"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>